# SlippiHelper

./: .gitignore  Cargo.toml  swap-input-config-py-alternative.py  swap-input-config.py
bindings/: Cargo.toml  build.rs
src/: main.rs  windowhelper.rs
