[package]
name = "slippi-helper"
version = "0.1.0"
authors = ["Natalie Dorshimer <dorshimer.natalie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configparser = "2.1.0"
windows = "0.18.0"
bindings = { path = "bindings" }
regex = "1"